--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -26,7 +26,7 @@
     </main>
 
     <aside>
-        <img src="https://www.churchofjesuschrist.org/temples/photo-gallery/buenos-aires-argentina-temple?lang=eng" alt="Buenos Aires, Argentina Temple" width="200">
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/buenos-aires-argentina/1200x1920/buenos-airies-argentina-temple-1009072-wallpaper.jpg" alt="Buenos Aires, Argentina Temple" width="200">
     </aside>
     <footer> 🎀Lujan Sheridan🎀 </footer>
 </header>
