--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title> Lujan Sheridan | WDD 130</title>
+        <meta name="description" content="Lujan Sheridan, wdd130, purpose learning and practice HTML and CSS.">
+        <meta name="author" content="Lujan Sheridan">
         <link  rel="stylesheet" href="styles/style.css">
     </head>
 
@@ -16,11 +18,18 @@
             </nav>
         </header>
     <main>
+    
     <h1>Lujan Sheridan | WDD 130</h1>
     <img src="images/profile-picture.jpg" alt="Hello, my name is Lujan Sheridan" width="200">
     <p>Hello! I'm Lujan Sheridan. I'm from Argentina, but I live in Puerto Rico. I've been married for five years and I have a little girl who is one and a half years old.
         I like to travel, go to the beach, take photos and videos. I'm excited to learn programming and become a web developer.</p>
 </main>
+
+<aside> 
+    <h2> Argentina</h2>
+    <img src="images/argentina.jpeg" alt="Iguazu Falls, Misiones, Argentina">
+    <p> Argentina, country of South America, covering most of the southern portion of the continent. The world’s eighth largest country, Argentina occupies an area more extensive than Mexico and the U.S. state of Texas combined. It encompasses immense plains, deserts, tundra, and forests, as well as tall mountains, rivers, and thousands of miles of ocean shoreline. Argentina also claims a portion of Antarctica, as well as several islands in the South Atlantic, including the British-ruled Falkland Islands (Islas Malvinas).</p>
+</aside>
 
 <footer>
     <p> © 2024 🎀Lujan Sheridan🎀 San Juan, Puerto Rico</p>
