--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
     <img src="images/profile-picture.jpg" alt="Hello, my name is Lujan Sheridan" width="200">
     <p>Hello! I'm Lujan Sheridan. I'm from Argentina, but I live in Puerto Rico. I've been married for five years and I have a little girl who is one and a half years old.
         I like to travel, go to the beach, take photos and videos. I'm excited to learn programming and become a web developer.</p>
+
+        <p> Here is some of my favorite temples:</p>
+
+        <ul class="box">
+            <li>
+                <a href="https://churchofjesuschristtemples.org/buenos-aires-argentina-temple/">Buenos Aires, Argentina Temple</a>
+            </li>
+            <li>
+                <a href="hhttps://churchofjesuschristtemples.org/san-diego-california-temple/">San Diego, California Temple</a>
+            </li>
+            <li>
+                <a href="https://churchofjesuschristtemples.org/rome-italy-temple/">Rome, Italy Temple</a>
+            </li>
+        </ul>
 </main>
 
 <aside> 
