--- a/week02/wireframe.html
+++ b/week02/wireframe.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <img src="images/logo.jpg" alt="Logo">
+            <img src="image/logo.jpg" alt="Logo">
             <nav>
                 <a href="#">Home</a>
                 <a href="#">About Us</a>
