--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,6 +3,8 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta description="This page is to test the html and css skills learned from week #3 of the course">
+    <meta author="Lujan Sheridan">
     <title> White Water Rafting</title>
 
 
@@ -16,9 +18,9 @@
     <header>
         <nav>
             <a href="index.html">Home</a>
-            <a href="wwr/about.html">About Us</a>
-            <a href="wwr/trips.html">Trips</a>
-            <a href="wwr/contact.html">Contact</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
