--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,15 +3,14 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta description="This page is to test the html and css skills learned from week #3 of the course">
+    <meta name=description" content="Whitewater Rafting River Trips with All-Outdoors">
     <meta author="Lujan Sheridan">
     <title> White Water Rafting</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -40,7 +39,7 @@
 
     <section>
     <h2> Adventures Awaits You!</h2>
-    <img src="images/raft-rapid.jpg" alt="Rafting">
+    <img src="https://byui-cse.github.io/wdd130-ww-course/resources/images/rafting53_600.jpg" alt="Rafting">
     <img src="images/rafting-family.jpg" alt="Family time">
     <img src="images/rafting30_600.jpg" alt="Rafting">
     <img src="images/rafting65.jpg" alt="Rafting">
