--- a/wwr/about.html
+++ b/wwr/about.html
@@ -39,9 +39,16 @@
 
     <section>
     <h2> Adventures Awaits You!</h2>
-    <img src="https://byui-cse.github.io/wdd130-ww-course/resources/images/rafting53_600.jpg" alt="Rafting">
+
+   <!--  <img src="https://byui-cse.github.io/wdd130-ww-course/resources/images/rafting53_600.jpg" alt="Rafting">  //*
     <img src="images/rafting-family.jpg" alt="Family time">
     <img src="images/rafting30_600.jpg" alt="Rafting">
+    <img src="images/rafting65.jpg" alt="Rafting">
+    <img src="images/rafting-nature.jpg" alt="Explore Nature"> \--> 
+
+    <img src="https://byui-cse.github.io/wdd130-ww-course/resources/images/rafting53_600.jpg" alt="Rafting">
+    <img src="https://byui-cse.github.io/wdd130-ww-course/resources/images/rafting21_600.png" alt="Family time">
+    <img src="https://byui-cse.github.io/wdd130-ww-course/resources/images/rafting59_600.jpg" alt="Rafting">
     <img src="images/rafting65.jpg" alt="Rafting">
     <img src="images/rafting-nature.jpg" alt="Explore Nature">
 </section>
