--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name=description" content="Whitewater Rafting River Trips with All-Outdoors">
+    <meta name=description" content="The best place to have fun White Water Rafting">
     <meta author="Lujan Sheridan">
     <title> White Water Rafting</title>
 
@@ -25,10 +25,10 @@
 
 <main>
     <div class="hero">
-        <img src= "https://byui-cse.github.io/wdd130-ww-course/resources/wwr-image-repo.html" alt=" Hero">
+        <img src= "https://byui-cse.github.io/wdd130-ww-course/resources/images/rafting57_1024.jpg" alt=" Hero">
         <h1> White Water Rafting </h1>
         <article>
-            <img src= "images/happy-customer.jpg" alt=" Happy Customer">
+            <img src= "images/happy-customer-2.jpg" alt=" Happy Customer">
         </article>
     </div>
     <section>
