--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name=description" content="The best place to have fun White Water Rafting">
-    <meta author="Lujan Sheridan">
+    <meta name=" author" content="Lujan Sheridan">
     <title> White Water Rafting</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,6 +15,9 @@
 
 <body>
     <header>
+        <div class="logo-box">
+            <img src="images/logo.jpg" alt="logo">
+        </div>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -28,7 +31,7 @@
         <img src= "https://byui-cse.github.io/wdd130-ww-course/resources/images/rafting57_1024.jpg" alt=" Hero">
         <h1> White Water Rafting </h1>
         <article>
-            <img src= "images/happy-customer-2.jpg" alt=" Happy Customer">
+            <img src= "images/happy-customer-2.jpg" alt=" Happy Customer" width="100">
         </article>
     </div>
     <section>
