--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,7 +28,7 @@
 
 <main>
     <div class="hero">
-        <img src= "https://byui-cse.github.io/wdd130-ww-course/resources/images/rafting57_1024.jpg" alt=" Hero">
+        <img src= "images/rafting57-hero.jpg" alt=" Hero">
         <h1> White Water Rafting </h1>
         <article>
             <img src= "images/happy-customer-2.jpg" alt=" Happy Customer" width="100">
