--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,9 +3,11 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name=description" content="The best place to have fun White Water Rafting">
-    <meta name=" author" content="Lujan Sheridan">
     <title> White Water Rafting</title>
+    <meta name="description" content="About Us">
+    <meta name=" author" content="Lujan Sheridan">
+    
+    <link rel="stylesheet" href="styles/rafting.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
