--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,8 +3,8 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> White Water Rafting</title>
-    <meta name="description" content="About Us">
+    <title>Rafting Site About Us Page</title>
+    <meta name="description" content="About Us Home Page Enhancement">
     <meta name=" author" content="Lujan Sheridan">
     
     <link rel="stylesheet" href="styles/rafting.css">
