--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rafting Site About Us Page</title>
+    <title> Whitewater Rafting | About Us </title>
     <meta name="description" content="About Us Home Page Enhancement">
     <meta name=" author" content="Lujan Sheridan">
     
