--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Whitewater Rafting | About Us </title>
-    <meta name="description" content="About Us Home Page Enhancement">
+    <title>Whitewater Rafting | About Us </title>
+    <meta name="description" content="Whitewater Rafting Company Website">
     <meta name="author" content="Lujan Sheridan">
     
     <link rel="stylesheet" href="styles/rafting.css">
