--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,12 +12,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-
 </head>
+
 
 <body>
     <header>
-        <div class="logo-box">
             <img src="images/logo.jpg" alt="logo">
         </div>
         <nav>
@@ -33,17 +32,17 @@
         <img src= "images/rafting57-hero.jpg" alt=" Hero">
         <h1> White Water Rafting </h1>
         <article>
-            <img src= "images/happy-customer-2.jpg" alt=" Happy Customer" width="100">
+            <img src= "images/happy-customer-2.jpg" alt="Happy Customer" width="100">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat ab maiores reiciendis nemo perspiciatis vero ipsam autem consectetur inventore. Magnam perspiciatis rem mollitia ipsam modi beatae minima placeat aut rerum.</p>
         </article>
     </div>
-    <section>
+
+    <section class="history">
         <h2>History</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At eius accusantium, eaque voluptas, necessitatibus veritatis nulla neque vero, culpa dolores hic animi debitis eveniet enim aperiam ex accusamus expedita eum.</p>
+        <p class="column-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, nisi. Officiis rem sapiente voluptatem totam? Pariatur voluptatum dolores excepturi minus aliquid aut voluptatem cumque, odio deserunt dolorem officia! Asperiores, repellendus!</p>
+        <img src="images/rafting65.jpg" alt="rafting-image">
+        <p class="column-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, eius nihil, voluptate voluptatum animi rem perferendis accusantium amet reiciendis molestiae nostrum mollitia! Ratione ea, quisquam rerum nulla quod veritatis libero.</p>
     </section>
-
-
-    <section>
-    <h2> Adventures Awaits You!</h2>
 
     <section class="adventure">
         <h2>Adventure Awaits You!</h2>
@@ -77,7 +76,7 @@
 
 
 <footer>
-<p>  © 2024 White Water Rafting, Lujan Sheridan  </p>
+    <p class="copyrights">  © 2024 White Water Rafting, Lujan Sheridan  </p>
 
 <nav class="sociallinks">
     <a href="https://www.facebook.com/">
@@ -95,3 +94,4 @@
     
 </body>
 </html>
+
