--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Whitewater Rafting Company Website">
     <meta name="author" content="Lujan Sheridan">
     
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="stylesheet" href="styles/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -84,6 +84,9 @@
     </a>
     <a href="https://www.instagram.com/">
         <img src="images/instagram-logo.png" alt="Instagram">
+    </a>
+    <a href="https://www.tiktok.com/">
+        <img src="images/tiktok-logo.png" alt="Tik tok">
     </a>
     <a href="https://www.tiktok.com/">
         <img src="images/tiktok-logo.png" alt="Tik tok">
