--- a/wwr/about.html
+++ b/wwr/about.html
@@ -79,18 +79,12 @@
     <p class="copyrights">  © 2024 White Water Rafting, Lujan Sheridan  </p>
 
 <nav class="sociallinks">
-    <a href="https://www.facebook.com/">
-        <img src="images/facebook-logo.png" alt="Facebook">
-    </a>
-    <a href="https://www.instagram.com/">
-        <img src="images/instagram-logo.png" alt="Instagram">
-    </a>
-    <a href="https://www.tiktok.com/">
-        <img src="images/tiktok-logo.png" alt="Tik tok">
-    </a>
-    <a href="https://www.tiktok.com/">
-        <img src="images/tiktok-logo.png" alt="Tik tok">
-    </a>
+    <img class="facebook-logo"  src="images/facebook-logo.png" alt="Facebook">
+    <a class="facebook" href="http://facebook.com">Facebook</a>
+    <img class="tiktok-logo" src="images/tiktok-logo.png" alt="Tik Tok">
+    <a class="tiktok" href="http://tiktok.com">Twitter</a>
+    <img class="instagram-logo" src="images/instagram-logo.png" alt="Instagram">
+    <a class="instagram" href="http://instagram.com">Instagram</a>
     </nav>
 </footer>
 
