--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,8 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Whitewater Rafting | About Us </title>
         <meta name="description" content="Whitewater Rafting Company Website">
-        <meta name="author" content="Lujan Sheridan">    
+        <meta name="author" content="Lujan Sheridan">   
+
         <link rel="stylesheet" href="styles/rafting.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
     </head>
     <body>
         <header>
@@ -81,8 +87,13 @@
             <a href="https://tiktok.com">
                 <img src="images/tiktok-logo.png" alt="Tiktok">
             </a>
+            <a href="https://twiter.com">
+                <img src="images/twiter-logo.png" alt="Twiter">
+            </a>
         </nav>
     </footer>
     </body>
+    <!-- Changes from correction W03-->
 </html>
+
 
