--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Whitewater Rafting Company Website">
         <meta name="author" content="Lujan Sheridan">   
 
-        <link rel="stylesheet" href="styles/rafting.css">
+        <link rel="stylesheet" href="styles/styles.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
