--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -14,6 +14,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
     </head>
+
     <body>
         <header>
             <img src="images/logo.jpg" alt="Rafting Site Logo">
@@ -25,18 +26,19 @@
                 <a href="contact.html">Contact Us</a>
             </nav>
         </header>
+
         <main>
             <h1>Contact</h1><br>
             <div class="contact-container">
                 <div class="company-info">
                     <h2>Company Information</h2><br>
                     <p>Address:</p>
-                    <p>Rafting Travel</p>
+                    <p>White Water Rafting</p>
                     <p>Lorem ipsum dolor sit amet</p><br>
                     <p>Phone:</p>
                     <p>(1) 808-273-2122</p><br>
                     <p>Email:</p>
-                    <p>aaa@gmail.com</p>
+                    <p>whitewaterrafting@gmail.com</p>
                 </div>
                 <div class="map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7417.073397608057!2d-157.91876916407142!3d21.6429699898837!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1707541155871!5m2!1sen!2sus" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -46,17 +48,17 @@
             <h2>Employee Profile</h2><br>
         <div class="employee-profiles">
             <div class="employee-profile">
-                <img src="employee1.jpg" alt="Employee 1">
+                <img src="images/employee1.contact" alt="Employee 1">
                 <p>Lorem ipsum dolor.</p>
             </div>
     
             <div class="employee-profile">
-                <img src="employee2.jpg" alt="Employee 2">
+                <img src="images/employee2.contact" alt="Employee 2">
                 <p>Lorem ipsum dolor.</p>
             </div>
     
             <div class="employee-profile">
-                <img src="employee3.jpg" alt="Employee 3">
+                <img src="images/employee3.contact" alt="Employee 3">
                 <p>Lorem ipsum dolor.</p>
             </div>
         </div>
@@ -89,6 +91,8 @@
                 </fieldset>
                 <button type="submit">Submit</button>
             </form>
+        </main>
+
     <footer>
         <p>©2024 | White Water Rafting |Lujan Sheridan</p>
         <nav class="sociallinks">
@@ -104,6 +108,7 @@
             <a href="https://twiter.com">
                 <img src="images/twiter-logo.png" alt="Twiter">
             </a>
+
         </nav>
     </footer>
     </body>
