--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -30,19 +30,19 @@
 
         <section class="trip-descriptions">
             <div class="trip">
-                <img src="trips1.jpg" alt="Trip 1">
+                <img src="images/trips1.jpg" alt="Trip 1">
                 <h3>Trip 1: River Extravaganza </h3>
 
             </div>
 
             <div class="trip">
-                <img src="trips2.jpg" alt="Trip 2">
+                <img src="images/trips2.jpg" alt="Trip 2">
                 <h3>Trip 2: Family Explorer</h3>
 
             </div>
 
             <div class="trip">
-                <img src="trips3.jpg" alt="Trip 3">
+                <img src="images/trips3.jpg" alt="Trip 3">
                 <h3>Trip 3: Long Journey </h3>
             </div>
         </section>
