--- a/wwr/index.html
+++ b/wwr/index.html
@@ -54,8 +54,8 @@
         <section class="grid-section">
             <h3><u>Our purpose and offerings:</u></h3>
             <div class="grid-container">
-                <img src="rafting22.jpg" alt="Rafting Image" class="full-width-image"><p>Discovering the beauty of nature while navigating through exciting rapids.</p>
-                <img src="rafting23.jpg" alt="Rafting Image" class="full-width-image"><p>Our experienced guides ensure a safe and thrilling experience for everyone.</p>
+                <img src="images/rafting65.jpg" alt="Rafting Image" class="full-width-image"><p>Discovering the beauty of nature while navigating through exciting rapids.</p>
+                <img src="images/rafting53.jpg" alt="Rafting Image" class="full-width-image"><p>Our experienced guides ensure a safe and thrilling experience for everyone.</p>
             </div>
         </section>
     </main>
