--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title> Lujan Sheridan | WDD 130</title>
         <meta name="description" content="Lujan Sheridan, wdd130, purpose learning and practice HTML and CSS.">
         <meta name="author" content="Lujan Sheridan">
-        <link  rel="stylesheet" href="styles/style.css">
+        <link  rel="stylesheet" href="styles/styles.css">
     </head>
 
     <body>
@@ -42,7 +42,7 @@
 
 <aside> 
     <h2> Argentina</h2>
-    <img src="images/argentina.jpeg" alt="Iguazu Falls, Misiones, Argentina">
+    <img src="images/argentina.jpg" alt="Iguazu Falls, Misiones, Argentina">
     <p> Argentina, country of South America, covering most of the southern portion of the continent. The world’s eighth largest country, Argentina occupies an area more extensive than Mexico and the U.S. state of Texas combined. It encompasses immense plains, deserts, tundra, and forests, as well as tall mountains, rivers, and thousands of miles of ocean shoreline. Argentina also claims a portion of Antarctica, as well as several islands in the South Atlantic, including the British-ruled Falkland Islands (Islas Malvinas).</p>
 </aside>
 
